# hermes-context-tuner

./: .gitignore  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  INTEGRATION.md
examples/: config.yaml.example
examples/skills/optimize-context/: SKILL.md
src/hermes_context_tuner/: __init__.py  budget.py  cli.py  engine.py  recovery.py
src/hermes_context_tuner/hermes_engine/: __init__.py  plugin.yaml
tests/: test_core.py  test_v1.py
